# ProbLLMs

./: README.md  main_config.yaml  pyproject.toml  requirements.txt  test.py
datasets/: ARC-Challenge_mcqa.jsonl  ARC-Easy_mcqa.jsonl  MATH-test_mcqa.jsonl  MATH-train_mcqa.jsonl  TheoremQA_mcqa.jsonl  cs_theoryQA.jsonl  gsm8k_mcqa.jsonl  mcqa_example.jsonl  mmlu-science-related_mcqa.jsonl
docker-amd64-cuda/dependencies/: requirements.txt
docker-amd64-cuda/from-python/: requirements.txt
models/: model_base.py  model_dpo.py
src/: automatic_annotation-huggingface.py  automatic_annotation-local.py  automatic_annotation.py  download_mcq_datasets.py
src/core/experiments/: construct_dpo_preference_dataset.py  finetune_with_dpo.py  generate_samples.py  push_model_to_huggingface.py  save_quantized_model.py
src/core/experiments/config/: default_dpo_lora.yaml  default_generation.yaml
src/probllms/: data.py  models.py
